starting implementations of cylindrical prop Using visual graphs from desmos.com that are commented in the generateTransforms function

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "apple-wheel-picker-svelte-library",
+	"name": "svelte-wheel-picker",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
